syntax = "proto3";

package ia.v1beta1;

option go_package = "api/managementpb/ia;iav1beta1";

import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "managementpb/checks.proto";
import "managementpb/ia/boolean_flag.proto";
import "managementpb/ia/channels.proto";
import "managementpb/ia/params.proto";
import "managementpb/ia/templates.proto";

// TODO move it to parent directory / package once API is v1-stable

// FilterType represents filter matching type.
enum FilterType {
  FILTER_TYPE_INVALID = 0;
  // =
  EQUAL = 1;
  // !=
  NOT_EQUAL = 2;
  // =~
  REGEX = 3;
  // !~
  NOT_REGEX = 4;
}

// Filter repsents a single filter condition.
message Filter {
  FilterType type = 1;
  string key = 2;
  string value = 3;
}

// RuleParam represents a single rule parameter for List, Change and Update APIs.
message RuleParam {
  // Machine-readable name (ID) that is used in expression.
  string name = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // Parameter type.
  ParamType type = 2;
  // For List API, true if the value wasn't set explicitly and has default value from the template.
  // For Change and Update APIs, true if the value should be reset to the default value from the template.
  bool default = 3;
  // Parameter value.
  oneof value {
    // Float value.
    float float = 4;
  }
}

// Rule represents Alert Rule.
message Rule {
  // Template used to create that rule.
  Template template = 1;
  // Rule ID.
  string rule_id = 2;
  // True if that rule is disabled.
  bool disabled = 3;
  // Rule human-readable summary.
  string summary = 4;
  // Rule parameters.
  repeated RuleParam params = 5;
  // Rule duration.
  google.protobuf.Duration for = 6;
  // True if duration wasn't set explicitly and has default value from template.
  bool default_for = 7;
  // Rule severity.
  management.Severity severity = 8;
  // True if severity wasn't set explicitly and has default value from template.
  bool default_severity = 9;
  // Custom labels.
  map<string, string> custom_labels = 10;
  // Filters.
  repeated Filter filters = 11;
  // Channels.
  repeated NotificationChannel channels = 12;
  // Rule creation time.
  google.protobuf.Timestamp created_at = 13;
}

message ListAlertRulesRequest {
  // If true, rule files will be re-read from disk.
  bool reload = 1;
}

message ListAlertRulesResponse {
  repeated Rule rules = 1;
}

message CreateAlertRuleRequest {
  // Rule ID.
  string rule_id = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // New rule status.
  bool disabled = 2;
  // Parameters to change from the default values. Missing parameters will not be changed.
  repeated RuleParam params = 3;
  // Rule set duration. Zero value will use default value.
  google.protobuf.Duration for = 4;
  // Rule severity.
  management.Severity severity = 5;
  // Custom labels.
  map<string, string> custom_labels = 6;
  // Filters.
  repeated Filter filters = 10;
  // TODO remove all

  // Channels TODO.
  repeated string channel_names = 11;
  // TODO remove all

  string template_name = 12;
}

message CreateAlertRuleResponse {}

message UpdateAlertRuleRequest {
  // Param repsesents a single Integrated Alerting rule parameter change.
  // TODO Do not use inner messages in all public APIs (for consistency).
  message Param {
    // Parameter name.
    string name = 1 [
      (validator.field) = {
        string_not_empty: true
      }
    ];
    // Remove set value (reset to default).
    bool remove_value = 2;
    // Parameter set value (float).
    float float = 3;
  }
  // Rule ID.
  string rule_id = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // New rule status.
  BooleanFlag enabled = 2;
  // Parameters to change. Missing parameters will not be changed.
  repeated Param params = 3;
  // Rule set duration. Zero value will not change it.
  google.protobuf.Duration for = 4;
  // Remove set duration (reset to default).
  bool remove_for = 5;
  // Severity.
  management.Severity severity = 7;
  // Replace all custom user-assigned labels.
  // TODO aleksi
  map<string, string> custom_labels = 8;
  // Remove all custom user-assigned labels.
  bool remove_custom_labels = 9;
  // Filters.
  repeated Filter filters = 10;
  // TODO remove all

  // Channels TODO.
  repeated string channel_names = 11;
  // TODO remove all

}

message UpdateAlertRuleResponse {}

message DeleteAlertRuleRequest {
  string name = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
}

message DeleteAlertRuleResponse {}

// Rules service provides public methods for managing Integrated Alerting rules.
service Rules {
  // ListAlertRules returns a list of all Integrated Alerting rules.
  rpc ListAlertRules(ListAlertRulesRequest) returns (ListAlertRulesResponse) {
    option (google.api.http) = {
      post: "/v1/management/ia/Rules/List"
      body: "*"
    };
  }
  // CreateAlertRule changes Integrated Alerting rule.
  rpc CreateAlertRule(CreateAlertRuleRequest) returns (CreateAlertRuleResponse) {
    option (google.api.http) = {
      post: "/v1/management/ia/Rules/Create"
      body: "*"
    };
  }
  // UpdateAlertRule changes Integrated Alerting rule.
  rpc UpdateAlertRule(UpdateAlertRuleRequest) returns (UpdateAlertRuleResponse) {
    option (google.api.http) = {
      post: "/v1/management/ia/Rules/Update"
      body: "*"
    };
  }
  // DeleteAlertRule changes Integrated Alerting rule.
  rpc DeleteAlertRule(DeleteAlertRuleRequest) returns (DeleteAlertRuleResponse) {
    option (google.api.http) = {
      post: "/v1/management/ia/Rules/Delete"
      body: "*"
    };
  }
}
